# eda-graph-gpu

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
bench/: bench.py
bench/circuits/: README.md
docs/: USAGE.md  lab-notebook.md  red-team-review.md
docs/research/: sta-optimization-roadmap.md
graph_routing/: README.md  cugraph_router.py  graphkit.py  test_routing.py
include/: circuit.h  sta.h  timing_graph.h
paper/: eda-graph-gpu-sta.md
src/: circuit.cpp  main.cpp  profile_main.cpp  sta_cpu.cpp  sta_cpu_mt.cpp  sta_double.cpp  sta_gpu.cu  sta_gpu_stub.cpp
tests/: CMakeLists.txt  egg_test.h  test_bench_circuits.cpp  test_corner_replay.cpp  test_edge_cases.cpp  test_generator_invariants.cpp  test_hand_computed.cpp  test_oracle_consistency.cpp  test_precision.cpp
